@@ -1,3 +1,11 @@
+1998-07-07  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* simtoolsgui.h (MessageProbeWidget): New protocol and class object.
+
+	* MessageProbeWidget.[hm] (-setProbe:) Make argument an object
+	conforming to the Probe protocol instead of being statically
+	typed.
+
 1998-06-24  Marcus G. Daniels  <mgd@ute.santafe.edu>
 
 	* Makefile.am (lib_LIBRARIES, libsimtoolsgui_a_SOURCES): Remove.
